data/derived/sp14/progs/unify/prog3587.ml.out
Characters 135-136:
  match a with ((d1,d2),sum) -> let c' = (c + d1 + d2)/10 in
                                          ^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
